fixed background overflow issues, fixed background size on non-retina devices

--- a/frontend/less/main.less
+++ b/frontend/less/main.less
@@ -25,6 +25,10 @@ body {
 		min-height: 100%;
 		padding: 20px 0;
 	}
+
+	.container {
+		max-width: 100%;
+	}
 }
 
 
