--- a/frontend/views/homeView.css
+++ b/frontend/views/homeView.css
@@ -85,7 +85,7 @@
 #homeView section.tutorial .slide .slide-content {
 	background-repeat: no-repeat;
 	background-position: 50%;
-	background-size: 100%;
+	background-size: 50%;
 	width: 100%;
 	height: 100%;
 }
@@ -113,10 +113,6 @@ only screen and (     -o-min-device-pixel-ratio: 2/1),
 only screen and (        min-device-pixel-ratio: 2),
 only screen and (                min-resolution: 192dpi),
 only screen and (                min-resolution: 2dppx) {
-
-	#homeView section.tutorial .slide .slide-content {
-		background-size: 50%;
-	}
 
 	#homeView section.tutorial .slide-one .slide-content {
 		background-image: url(../img/tutorial_1@2x.png);
